--- a/timer.html
+++ b/timer.html
@@ -1,7 +1,8 @@
 <!-- Student Name: Olivia Reed
     Date: 2/15/2022
     File Name:timer.html -->
-    
+<!-- original code -->     
+
 <!DOCTYPE html>
 <html>
     <style>
